compiler/tests/en/errors/struct_field_private.salam
// EXPECT: E017
struct Counter:
    value : int = 0
    pub func get() : int: ret value end
end

func main:
    c := Counter { value = 5 }
    println c.value
end
